bitsandbytes/bnb/tests/ui/bitstream_byte_aligned.stderr
error[E0080]: evaluation panicked: this struct's fields are all byte-aligned. The bare `#[derive(BitDecode/BitEncode)]` is the low-level bit codec; for a byte-aligned message use `#[bin]` — the unified codec (it handles byte-aligned data natively and adds magic/count/ctx/map/if/validate). The bare derive is for fields that straddle byte boundaries (e.g. a 108-bit payload). To keep the bare derive on an all-byte-aligned struct anyway, add `#[bit_stream(allow_byte_aligned)]`.
 --> tests/ui/bitstream_byte_aligned.rs:6:10
  |
6 | #[derive(BitDecode)]
  |          ^^^^^^^^^ evaluation of `_` failed here
